# donations-tracker

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
migrations/: 0001_init_schema.sql
src/: checker.rs  main.rs  sql.rs
